[MPRIS Data Engine] Avoid blocking calls in media shortcuts handling

All the information we need (player capabilities and playback status) is already present and managed by the PlayerContainer

BUG: 397685
FIXED-IN: 5.13.5

Differential Revision: https://phabricator.kde.org/D14970